# afrispeech-selector

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
afrispeech_selector/: __init__.py  builder.py  catalog.py  cli.py  export.py
data/: catalog.tsv
notebooks/: afrispeech_selector.ipynb
scripts/: clean_source_dataset.py  refresh_catalog.py
tests/: test_builder.py  test_cli.py  test_export.py  test_selector.py
